--- a/translations/kangyur/translations/056-009_toh141,526,916-the_incantation_of_the_six_gates.xml
+++ b/translations/kangyur/translations/056-009_toh141,526,916-the_incantation_of_the_six_gates.xml
@@ -4,29 +4,30 @@
         <teiHeader>
                 <fileDesc>
                         <titleStmt> 
-                                <title type="mainTitle" xml:lang="en">The Dhāraṇī of the Six Gates</title>
-                                <title type="mainTitle" xml:lang="Sa-Ltn">Ṣaṇmukhī­dhāraṇī</title>
-                                <title type="mainTitle" xml:lang="Bo-Ltn">sgo drug pa’i gzungs</title>
-                                <title type="mainTitle" xml:lang="bo">སྒོ་དྲུག་པའི་གཟུངས།</title>
-                                <title type="longTitle" xml:lang="en">The Noble Dhāraṇī of the Six Gates</title>
-                                <title type="longTitle" xml:lang="Sa-Ltn">Ārya­ṣaṇmukhīnāma­dhāraṇī</title>
-                                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa sgo drug pa zhes bya ba’i gzungs</title>
-                                <title type="longTitle" xml:lang="bo">འཕགས་པ་སྒོ་དྲུག་པ་ཞེས་བྱ་བའི་གཟུངས།</title>
+                                <title type="mainTitle" xml:lang="en">The Dhāraṇī of the Six Gates</title> 
+                                <title type="mainTitle" xml:lang="Sa-Ltn">Ṣaṇmukhī­dhāraṇī</title> 
+                                <title type="mainTitle" xml:lang="Bo-Ltn">sgo drug pa’i gzungs</title> 
+                                <title type="mainTitle" xml:lang="bo">སྒོ་དྲུག་པའི་གཟུངས།</title> 
+                                <title type="longTitle" xml:lang="en">The Noble Dhāraṇī of the Six Gates</title> 
+                                <title type="longTitle" xml:lang="Sa-Ltn">Ārya­ṣaṇmukhīnāma­dhāraṇī</title> 
+                                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa sgo drug pa zhes bya ba’i gzungs</title> 
+                                <title type="longTitle" xml:lang="bo">འཕགས་པ་སྒོ་དྲུག་པ་ཞེས་བྱ་བའི་གཟུངས།</title> 
+                                <title type="otherTitle" xml:lang="zh">《六門陀羅尼》（大正藏：《六門陀羅尼經》）</title> 
                                 <author role="translatorMain" ref="eft:team-50">Translated by the Pema Yeshé Dé Translation Team<lb/> under the patronage and
-                                        supervision of 84000: Translating the Words of the Buddha</author>
-                                <author role="translatorEng" ref="eft:person-316">Giuliano Proença</author>
-                                <consultant role="advisor" ref="eft:person-315">Joaquim Monteiro</consultant>
-                                <author role="translatorEng" ref="eft:person-317">Leticia Osorio</author>
-                                <consultant role="projectManager" ref="eft:person-316">Giuliano Francisco Proença</consultant>
-                                <editor role="projectEditor" ref="eft:person-262">David Higgins</editor>
-                                <editor role="copyEditor" ref="eft:person-92">Laura Goetz</editor>
-                                <editor role="projectEditor" ref="eft:person-250">Rory Lindsay</editor>
-                                <editor role="projectEditor" ref="eft:person-139">John Canti</editor>
-                                <editor role="TEImarkupEditor" ref="eft:person-381">Martina Cotter</editor>
+                                        supervision of 84000: Translating the Words of the Buddha</author> 
+                                <author role="translatorEng" ref="eft:person-316">Giuliano Proença</author> 
+                                <consultant role="advisor" ref="eft:person-315">Joaquim Monteiro</consultant> 
+                                <author role="translatorEng" ref="eft:person-317">Leticia Osorio</author> 
+                                <consultant role="projectManager" ref="eft:person-316">Giuliano Francisco Proença</consultant> 
+                                <editor role="projectEditor" ref="eft:person-262">David Higgins</editor> 
+                                <editor role="copyEditor" ref="eft:person-92">Laura Goetz</editor> 
+                                <editor role="projectEditor" ref="eft:person-250">Rory Lindsay</editor> 
+                                <editor role="projectEditor" ref="eft:person-139">John Canti</editor> 
+                                <editor role="TEImarkupEditor" ref="eft:person-381">Martina Cotter</editor> 
                                 <editor role="finalReviewer" ref="eft:person-289">Nathaniel Rich</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.1 <date>2022</date>
+                <edition>v 1.0.2 <date>2022</date>
                 </edition>
             </editionStmt>
                         <publicationStmt status="1">
@@ -82,67 +83,60 @@
                                 </bibl>
 
                         </sourceDesc>
-                        <notesStmt>
-                                <note type="lastUpdated" date-time="2022-04-11T12:34:19.398Z" user="admin">11/04/2022 12:34:19</note>
-                                <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-13T10:35:48.837Z" user="john">v 0.1.0</note>
-                                <note type="updated" update="translation-status" value="3" date-time="2019-12-13T10:35:48.837Z" user="john">3</note>
-                                <note type="updated" update="translation-status" value="2.h" date-time="2020-03-10T10:43:01.175Z" user="line-tofte">2.h</note>
+                        <notesStmt> 
+                                <note type="lastUpdated" date-time="2022-07-26T05:59:10.437Z" user="admin">26/07/2022 05:59:10</note> 
+                                <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-13T10:35:48.837Z" user="john">v 0.1.0</note> 
+                                <note type="updated" update="translation-status" value="3" date-time="2019-12-13T10:35:48.837Z" user="john">3</note> 
+                                <note type="updated" update="translation-status" value="2.h" date-time="2020-03-10T10:43:01.175Z" user="line-tofte">2.h</note> 
                                 <note type="updated" update="text-version" value="0.1.1" date-time="2021-03-12T15:04:32.179Z" user="line-tofte">Auto
-                                        (update-contributors)</note>
+                                        (update-contributors)</note> 
                                 <note type="updated" update="text-version" value="0.1.2" date-time="2021-03-12T15:05:32.069Z" user="line-tofte">Auto
-                                        (update-contributors)</note>
+                                        (update-contributors)</note> 
                                 <note type="updated" update="text-version" value="0.1.3" date-time="2021-03-12T15:05:43.129Z" user="line-tofte">Auto
-                                        (update-contributors)</note>
-                                <note type="updated" update="translation-status" value="2.g" date-time="2021-03-22T11:20:44.007Z" user="line-tofte">2.g</note>
+                                        (update-contributors)</note> 
+                                <note type="updated" update="translation-status" value="2.g" date-time="2021-03-22T11:20:44.007Z" user="line-tofte">2.g</note> 
                                 <note type="updated" update="text-version" value="0.1.4" date-time="2021-03-22T11:20:44.007Z" user="line-tofte">Auto
-                                        (update-publication-status)</note>
+                                        (update-publication-status)</note> 
                                 <note type="updated" update="text-version" value="0.1.5" date-time="2021-03-22T11:22:03.995Z" user="line-tofte">Auto
-                                        (update-contributors)</note>
-                                <note type="updated" update="translation-status" value="2.f" date-time="2021-04-01T07:27:27.479Z" user="line-tofte">2.f</note>
+                                        (update-contributors)</note> 
+                                <note type="updated" update="translation-status" value="2.f" date-time="2021-04-01T07:27:27.479Z" user="line-tofte">2.f</note> 
                                 <note type="updated" update="text-version" value="0.1.6" date-time="2021-04-01T07:27:27.479Z" user="line-tofte">Auto
-                                        (update-publication-status)</note>
-                                <note type="updated" update="translation-status" value="2.e" date-time="2021-04-27T15:20:35.755Z" user="line-tofte">2.e</note>
+                                        (update-publication-status)</note> 
+                                <note type="updated" update="translation-status" value="2.e" date-time="2021-04-27T15:20:35.755Z" user="line-tofte">2.e</note> 
                                 <note type="updated" update="text-version" value="0.1.7" date-time="2021-04-27T15:20:35.755Z" user="line-tofte">Auto
-                                        (update-publication-status)</note>
+                                        (update-publication-status)</note> 
                                 <note type="updated" update="text-version" value="0.1.8" date-time="2021-04-27T15:20:58.133Z" user="line-tofte">Auto
-                                        (update-contributors)</note>
+                                        (update-contributors)</note> 
                                 <note type="updated" update="text-version" value="0.1.9" date-time="2021-04-27T15:21:13.78Z" user="line-tofte">Auto
-                                        (update-contributors)</note>
-                                <note type="updated" update="translation-status" value="2.d" date-time="2021-04-29T07:33:51.019Z" user="line-tofte">2.d</note>
+                                        (update-contributors)</note> 
+                                <note type="updated" update="translation-status" value="2.d" date-time="2021-04-29T07:33:51.019Z" user="line-tofte">2.d</note> 
                                 <note type="updated" update="text-version" value="0.1.10" date-time="2021-04-29T07:33:51.019Z" user="line-tofte">Auto
-                                        (update-publication-status)</note>
-                                <note type="updated" update="translation-status" value="2.c" date-time="2021-05-04T07:04:18.729Z" user="line-tofte">2.c</note>
+                                        (update-publication-status)</note> 
+                                <note type="updated" update="translation-status" value="2.c" date-time="2021-05-04T07:04:18.729Z" user="line-tofte">2.c</note> 
                                 <note type="updated" update="text-version" value="0.1.11" date-time="2021-05-04T07:04:18.729Z" user="line-tofte">Auto
-                                        (update-publication-status)</note>
+                                        (update-publication-status)</note> 
                                 <note type="updated" update="text-version" value="0.1.12" date-time="2021-09-09T07:59:38.118Z" user="line-tofte">Auto
-                                        (update-contributors)</note>
-                                <note type="updated" update="translation-status" value="2.b" date-time="2021-09-10T06:47:55.581Z" user="line-tofte">2.b</note>
+                                        (update-contributors)</note> 
+                                <note type="updated" update="translation-status" value="2.b" date-time="2021-09-10T06:47:55.581Z" user="line-tofte">2.b</note> 
                                 <note type="updated" update="text-version" value="0.1.13" date-time="2021-09-10T06:47:55.581Z" user="line-tofte">Auto
-                                        (update-publication-status)</note>
-                                <note type="updated" update="text-version" value="0.1.14" date-time="2021-09-27T09:20:18.152Z" user="john">0.1.14</note>
+                                        (update-publication-status)</note> 
+                                <note type="updated" update="text-version" value="0.1.14" date-time="2021-09-27T09:20:18.152Z" user="john">0.1.14</note> 
                                 <note type="updated" update="text-version" value="0.1.15" date-time="2021-09-29T11:47:46.13Z" user="line-tofte">Auto
-                                        (update-contributors)</note>
-                                <note type="updated" update="translation-status" value="2.a" date-time="2021-12-02T09:17:20.139Z" user="line-tofte">2.a</note>
-
+                                        (update-contributors)</note> 
+                                <note type="updated" update="translation-status" value="2.a" date-time="2021-12-02T09:17:20.139Z" user="line-tofte">2.a</note> 
                                 <note type="updated" update="text-version" value="0.1.16" date-time="2021-12-02T09:17:20.139Z" user="line-tofte">Auto
-                                        (update-publication-status)</note>
-
+                                        (update-publication-status)</note> 
                                 <note type="updated" update="text-version" value="0.1.17" date-time="2021-12-02T09:18:02.868Z" user="line-tofte">Auto
-                                        (update-contributors)</note>
-                        
-    <note type="updated" update="text-version" value="0.0.2" date-time="2021-12-21T16:57:08.288Z" user="john">Edits to dhāraṇī suggested by Wiesiek. </note>
-
-    <note type="updated" update="translation-status" value="2" date-time="2021-12-22T15:18:53.882Z" user="line-tofte">2</note>
-
-    <note type="updated" update="text-version" value="0.0.3" date-time="2021-12-22T15:18:53.882Z" user="line-tofte">Auto (update-publication-status)</note>
-
-    <note type="updated" update="text-version" value="0.0.4" date-time="2022-01-06T10:29:46.206Z" user="line-tofte">Auto (update-contributors)</note>
-
-    <note type="updated" update="translation-status" value="1" date-time="2022-01-13T18:21:07.044Z" user="martina-cotter">1</note>
-
-    <note type="updated" update="text-version" value="1.0.0" date-time="2022-01-13T18:21:07.044Z" user="martina-cotter">First published version</note>
-    <note type="updated" update="text-version" value="1.0.1" date-time="2022-04-11T12:34:15.635Z" user="laura">Bibliography update</note>
-</notesStmt>
+                                        (update-contributors)</note> 
+                                <note type="updated" update="text-version" value="0.0.2" date-time="2021-12-21T16:57:08.288Z" user="john">Edits to dhāraṇī suggested by Wiesiek. </note> 
+                                <note type="updated" update="translation-status" value="2" date-time="2021-12-22T15:18:53.882Z" user="line-tofte">2</note> 
+                                <note type="updated" update="text-version" value="0.0.3" date-time="2021-12-22T15:18:53.882Z" user="line-tofte">Auto (update-publication-status)</note> 
+                                <note type="updated" update="text-version" value="0.0.4" date-time="2022-01-06T10:29:46.206Z" user="line-tofte">Auto (update-contributors)</note> 
+                                <note type="updated" update="translation-status" value="1" date-time="2022-01-13T18:21:07.044Z" user="martina-cotter">1</note> 
+                                <note type="updated" update="text-version" value="1.0.0" date-time="2022-01-13T18:21:07.044Z" user="martina-cotter">First published version</note> 
+                                <note type="updated" update="text-version" value="1.0.1" date-time="2022-04-11T12:34:15.635Z" user="laura">Bibliography update</note>
+                            <note type="updated" update="text-version" value="1.0.2" date-time="2022-07-26T05:59:02.707Z" user="cabie-sim">Auto (update-titles)</note>
+                        </notesStmt>
                 </fileDesc>
         </teiHeader>
         <text>
