--- a/translations/kangyur/translations/057-004_toh145,847-the_dharani_of_the_jewel_torch.xml
+++ b/translations/kangyur/translations/057-004_toh145,847-the_dharani_of_the_jewel_torch.xml
@@ -4,18 +4,18 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="bo">དཀོན་མཆོག་ཏ་ལ་ལའི་གཟུངས།</title>
-                <title type="mainTitle" xml:lang="Bo-Ltn">dkon mchog ta la la’i gzungs</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">Ratnolkādhāraṇī</title>
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī of the Jewel Torch</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Ratnolkādhāraṇī</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">dkon mchog ta la la’i gzungs</title>
+                <title type="mainTitle" xml:lang="bo">དཀོན་མཆོག་ཏ་ལ་ལའི་གཟུངས།</title>
+                <title type="longTitle" xml:lang="en">The Noble Mahāyāna Sūtra “The Dhāraṇī of the Jewel Torch”</title>
+                <title type="longTitle" xml:lang="Sa-Ltn">Āryaratnolkānāmadhāraṇīmahāyānasūtra</title>
                 <title type="longTitle" xml:lang="bo">འཕགས་པ་དཀོན་མཆོག་ཏ་ལ་ལའི་གཟུངས་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
                 <title type="longTitle" xml:lang="Bo-Ltn">’phags pa dkon mchog ta la la’i gzungs zhes bya ba theg pa chen po’i mdo</title>
-                <title type="longTitle" xml:lang="Sa-Ltn">Āryaratnolkānāmadhāraṇīmahāyānasūtra</title>
-                <title type="longTitle" xml:lang="en">The Noble Mahāyāna Sūtra “The Dhāraṇī of the Jewel Torch”</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Ratnolkadhāraṇīsūtra</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">dkon mchog sgron me’i mdo</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">dkon mchog sgron ma’i mdo</title>
-                <title type="otherTitle" xml:lang="zh">寶燈陀羅尼經</title>
+                <title type="otherTitle" xml:lang="zh">《寶燈明陀羅尼》（大正藏：《大方廣總持寶光明經》）</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">dkon mchog sgron me’i mdo</title>
                 <author role="translatorMain" ref="contributors.xml#team-11">Translated by David Jackson<lb/> under the patronage and supervision of
                     84000: Translating the Words of the Buddha</author>
                 <author role="translatorEng" ref="contributors.xml#person-14">David Jackson</author>
@@ -31,7 +31,7 @@
                 <sponsor ref="sponsors.xml#sponsor-47">Make and Wang Xiao Juan (馬珂和王曉娟)</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.4.18 <date>2021</date>
+                <edition>v 1.4.19 <date>2021</date>
                 </edition>
             </editionStmt>
 
@@ -75,14 +75,12 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-06-13T14:30:37.693Z" user="admin">13/06/2022 14:30:37</note>
+                <note type="lastUpdated" date-time="2022-07-26T06:00:32.755Z" user="admin">26/07/2022 06:00:32</note>
                 <note type="updated" update="translation-status" value="2.d" date-time="2019-07-02T13:19:52.294Z" user="john">2.d</note>
                 <note type="updated" update="translation-status" value="2.c" date-time="2019-09-13T09:10:31.38Z" user="john">2.c</note>
                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-10-19T07:20:48.166Z" user="andreas">v 0.1.0</note>
                 <note type="updated" update="translation-status" value="2.a" date-time="2019-11-11T12:43:55.482Z" user="james">2.a</note>
-
                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-11-30T10:51:56.757Z" user="andre">v 0.1.0</note>
-
                 <note type="updated" update="text-version" value="v 0.1.1" date-time="2019-12-16T17:30:27.202Z" user="laura">Proofed markup and made
                     edits as needed.</note>
                 <note type="updated" update="translation-status" value="2" date-time="2020-02-11T06:01:52.696Z" user="mike">2</note>
@@ -152,23 +150,23 @@
                 <note type="updated" update="translation-status" value="2" date-time="2021-02-03T11:50:04.508Z" user="mike">2</note>
                 <note type="updated" update="text-version" value="1.4.4" date-time="2021-02-03T11:50:04.508Z" user="mike">Auto
                     (update-publication-status)</note>
-            
-    <note type="updated" update="translation-status" value="1" date-time="2021-03-04T13:22:58.946Z" user="mike">1</note>
-    <note type="updated" update="text-version" value="1.4.5" date-time="2021-03-04T13:22:58.946Z" user="mike">New published version after revisions</note>
-    <note type="updated" update="text-version" value="1.4.6" date-time="2021-03-12T18:41:15.374Z" user="celso">Non-breaking spaces before dandas</note>
-    <note type="updated" update="text-version" value="1.4.7" date-time="2021-03-12T18:43:19.889Z" user="celso">reset blank pdfs</note>
-    <note type="updated" update="text-version" value="1.4.8" date-time="2021-03-12T18:46:46.116Z" user="celso">reset blank pdfs</note>
-    <note type="updated" update="text-version" value="1.4.9" date-time="2021-03-12T19:26:46.558Z" user="celso">reset blank pdfs</note>
-    <note type="updated" update="text-version" value="1.4.10" date-time="2021-03-12T19:31:24.154Z" user="celso">reset blank pdfs</note>
-    <note type="updated" update="text-version" value="1.4.11" date-time="2021-03-17T19:46:35.15Z" user="celso">@key added to note to create alternate message regarding vol 100+ text</note>
-    <note type="updated" update="text-version" value="1.4.12" date-time="2021-04-22T14:21:39.394Z" user="celso">added @xml:lang tag to  a few Chinese strings that were missing it</note>
-    <note type="updated" update="text-version" value="1.4.13" date-time="2021-04-26T09:22:22.68Z" user="mike">typo corrected</note>
-    <note type="updated" update="text-version" value="1.4.14" date-time="2021-05-31T10:06:35.449Z" user="mike">Typo corrected</note>
-    <note type="updated" update="text-version" value="1.4.15" date-time="2021-06-10T22:24:21.562Z" user="mike">Typo Corrected</note>
-    <note type="updated" update="text-version" value="1.4.16" date-time="2021-06-26T04:20:36.134Z" user="celso">kiṃnara to kinnara</note>
-    <note type="updated" update="text-version" value="1.4.17" date-time="2021-12-13T10:38:42.641Z" user="john">Changed title of chapter referenced in Toh 44-20 to match change made there.</note>
-    <note type="updated" update="text-version" value="1.4.18" date-time="2022-06-13T14:30:33.769Z" user="konchog">One small fix to bibliography.</note>
-</notesStmt>
+                <note type="updated" update="translation-status" value="1" date-time="2021-03-04T13:22:58.946Z" user="mike">1</note>
+                <note type="updated" update="text-version" value="1.4.5" date-time="2021-03-04T13:22:58.946Z" user="mike">New published version after revisions</note>
+                <note type="updated" update="text-version" value="1.4.6" date-time="2021-03-12T18:41:15.374Z" user="celso">Non-breaking spaces before dandas</note>
+                <note type="updated" update="text-version" value="1.4.7" date-time="2021-03-12T18:43:19.889Z" user="celso">reset blank pdfs</note>
+                <note type="updated" update="text-version" value="1.4.8" date-time="2021-03-12T18:46:46.116Z" user="celso">reset blank pdfs</note>
+                <note type="updated" update="text-version" value="1.4.9" date-time="2021-03-12T19:26:46.558Z" user="celso">reset blank pdfs</note>
+                <note type="updated" update="text-version" value="1.4.10" date-time="2021-03-12T19:31:24.154Z" user="celso">reset blank pdfs</note>
+                <note type="updated" update="text-version" value="1.4.11" date-time="2021-03-17T19:46:35.15Z" user="celso">@key added to note to create alternate message regarding vol 100+ text</note>
+                <note type="updated" update="text-version" value="1.4.12" date-time="2021-04-22T14:21:39.394Z" user="celso">added @xml:lang tag to  a few Chinese strings that were missing it</note>
+                <note type="updated" update="text-version" value="1.4.13" date-time="2021-04-26T09:22:22.68Z" user="mike">typo corrected</note>
+                <note type="updated" update="text-version" value="1.4.14" date-time="2021-05-31T10:06:35.449Z" user="mike">Typo corrected</note>
+                <note type="updated" update="text-version" value="1.4.15" date-time="2021-06-10T22:24:21.562Z" user="mike">Typo Corrected</note>
+                <note type="updated" update="text-version" value="1.4.16" date-time="2021-06-26T04:20:36.134Z" user="celso">kiṃnara to kinnara</note>
+                <note type="updated" update="text-version" value="1.4.17" date-time="2021-12-13T10:38:42.641Z" user="john">Changed title of chapter referenced in Toh 44-20 to match change made there.</note>
+                <note type="updated" update="text-version" value="1.4.18" date-time="2022-06-13T14:30:33.769Z" user="konchog">One small fix to bibliography.</note>
+                <note type="updated" update="text-version" value="1.4.19" date-time="2022-07-26T06:00:24.843Z" user="cabie-sim">Auto (update-titles)</note>
+            </notesStmt>
         </fileDesc>
     </teiHeader>
     <text>
