--- a/translations/kangyur/translations/057-006_toh147-the_sutra_teaching_the_great_compassion_of_the_tathagatas.xml
+++ b/translations/kangyur/translations/057-006_toh147-the_sutra_teaching_the_great_compassion_of_the_tathagatas.xml
@@ -4,23 +4,22 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">de bzhin gshegs pa’i snying rje chen po nges par bstan pa/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">Tathāgata­mahā­karuṇā­nirdeśa</title>
                 <title type="mainTitle" xml:lang="en">The Teaching on the Great Compassion of the Tathāgata</title>
-                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa de bzhin gshegs pa’i snying rje chen po nges par bstan pa zhes bya ba theg pa chen po’i mdo</title>
-                <title type="longTitle" xml:lang="Sa-Ltn">Ārya­tathāgata­mahākaruṇā­nirdeśanāma­mahāyāna­sūtra</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Tathāgata­mahā­karuṇā­nirdeśa</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">de bzhin gshegs pa’i snying rje chen po nges par bstan pa/</title>
                 <title type="longTitle" xml:lang="en">The Noble Great Vehicle Sūtra “The Teaching on the Great Compassion of the Tathāgata”</title>
-                <title type="otherTitle" xml:lang="zh">如來大悲經</title>
-                <title type="otherTitle" xml:lang="zh">（大正藏：大哀經）</title>
-                <title type="otherTitle" xml:lang="bo">དེ་བཞིན་གཤེགས་པའི་སྙིང་རྗེ་ཆེན་པོ་ངེས་པར་བསྟན་པ།</title>
-                <title type="otherTitle" xml:lang="bo">འཕགས་པ་དེ་བཞིན་གཤེགས་པའི་སྙིང་རྗེ་ཆེན་པོ་ངེས་པར་བསྟན་པ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
-                <title type="otherTitle" xml:lang="en">The Sūtra of Dhāraṇīśvararāja</title>
+                <title type="longTitle" xml:lang="Sa-Ltn">Ārya­tathāgata­mahākaruṇā­nirdeśanāma­mahāyāna­sūtra</title>
+                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa de bzhin gshegs pa’i snying rje chen po nges par bstan pa zhes bya ba theg pa chen po’i mdo</title>
                 <title type="otherTitle" xml:lang="en">The Questions of Dhāraṇīśvararāja</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">gzungs kyi rgyal po’i mdo</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">gzungs kyi dbang phyug rgyal po’i mdo</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">dbang phyug rgyal pos zhus pa</title>
+                <title type="otherTitle" xml:lang="en">The Sūtra of Dhāraṇīśvararāja</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Dhāraṇīśvara­rāja­sūtra</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Dhāraṇīśvara­rāja­paripṛcchā</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">dbang phyug rgyal pos zhus pa</title>
+                <title type="otherTitle" xml:lang="zh">《如來大悲經 》（大正藏：大哀經）</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">gzungs kyi rgyal po’i mdo</title>
+                <title type="otherTitle" xml:lang="bo">འཕགས་པ་དེ་བཞིན་གཤེགས་པའི་སྙིང་རྗེ་ཆེན་པོ་ངེས་པར་བསྟན་པ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">gzungs kyi dbang phyug rgyal po’i mdo</title>
+                <title type="otherTitle" xml:lang="bo">དེ་བཞིན་གཤེགས་པའི་སྙིང་རྗེ་ཆེན་པོ་ངེས་པར་བསྟན་པ།</title>
                 <author role="translatorMain" ref="contributors.xml#team-3">Translated by Anne Burchardi<lb/>under the patronage and supervision of
                     84000: Translating the Words of the Buddha</author>
                 <author role="translatorEng" ref="contributors.xml#person-12">Dr. Anne Burchardi</author>
@@ -37,7 +36,7 @@
                 <sponsor ref="sponsors.xml#sponsor-2">Frank ST Gu</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.2.20 <date>2022</date>
+                <edition>v 1.2.21 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -69,7 +68,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-05-23T15:52:13.553Z" user="admin">23/05/2022 15:52:13</note>
+                <note type="lastUpdated" date-time="2022-07-26T06:02:04.299Z" user="admin">26/07/2022 06:02:04</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version
                     increment</note>
                 <note type="updated" update="translation-status" value="2.f" date-time="2020-02-20T09:16:36.684Z" user="andreas">2.f</note>
@@ -101,25 +100,27 @@
                 <note type="updated" update="text-version" value="1.0.2" date-time="2021-01-05T11:58:23.762Z" user="john">changes to notes and minor changes in intro</note>
                 <note type="updated" update="text-version" value="1.0.3" date-time="2021-01-05T17:20:20.66Z" user="john">Auto (update-titles)</note>
                 <note type="updated" update="text-version" value="1.0.4" date-time="2021-01-06T11:23:03.606Z" user="john">Auto (update-titles)</note>
-            
-    <note type="updated" update="text-version" value="1.0.5" date-time="2021-01-08T21:03:55.246Z" user="celso">updated bibliography entries</note>
-    <note type="updated" update="text-version" value="1.2.1" date-time="2021-01-13T22:10:40.571Z" user="john">Substantial revision of introduction</note>
-    <note type="updated" update="text-version" value="1.2.3" date-time="2021-01-15T21:02:54.981Z" user="john">1.2.3</note>
-    <note type="updated" update="text-version" value="1.2.4" date-time="2021-01-21T19:35:40.145Z" user="john">Further corrections, spaces, glossary edits, glossary re-cached.</note>
-    <note type="updated" update="text-version" value="1.2.5" date-time="2021-01-25T20:39:46.953Z" user="laura">Removed slash in long title Wylie</note>
-    <note type="updated" update="text-version" value="1.2.6" date-time="2021-01-29T10:14:39.97Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="1.2.7" date-time="2021-02-12T18:51:24.1Z" user="celso">"scholar" to "preceptor" in colophon</note>
-    <note type="updated" update="text-version" value="1.2.8" date-time="2021-02-22T23:30:13.66Z" user="celso">xml:lang="ja" to "Ja-Ltn" to create italics</note>
-    <note type="updated" update="text-version" value="1.2.9" date-time="2021-02-22T23:33:21.698Z" user="celso">fix blank pdf</note>
-    <note type="updated" update="text-version" value="1.2.10" date-time="2021-04-22T14:54:51.314Z" user="celso">added @xml:lang tag to  a few Chinese strings that were missing it</note>
-    <note type="updated" update="text-version" value="1.2.11" date-time="2021-05-27T00:03:49.101Z" user="celso">corrected a typo discovered during TM alignment</note>
-    <note type="updated" update="text-version" value="1.2.12" date-time="2021-06-26T04:20:55.515Z" user="celso">kiṃnara to kinnara</note>
-    <note type="updated" update="text-version" value="1.2.13" date-time="2021-07-12T10:11:05.79Z" user="andre">translation of brgyad pa'i sa fixed and glossary entry added</note>
-    <note type="updated" update="text-version" value="1.2.14" date-time="2021-09-02T10:37:10.41Z" user="andre"> translation of brgyad pa fixed in two more instances</note>
-    <note type="updated" update="text-version" value="1.2.15" date-time="2021-09-15T09:29:31.459Z" user="john">Change to one term, awaiting Wiesiek's edits.</note>
-    <note type="updated" update="text-version" value="1.2.16" date-time="2021-09-23T05:41:37.8Z" user="mike">Wiesieks edits added</note>
-    <note type="updated" update="text-version" value="1.2.17" date-time="2021-09-23T09:21:37.275Z" user="mike">typos in intro corrected</note>
-    <note type="updated" update="text-version" value="1.2.18" date-time="2021-09-24T05:58:28.337Z" user="mike">Wiesiek typo corrected</note>    <note type="updated" update="text-version" value="1.2.19" date-time="2022-03-17T01:26:37.529Z" user="celso">Fixed missing glossary link</note>    <note type="updated" update="text-version" value="1.2.20" date-time="2022-05-23T15:52:09.734Z" user="martina-cotter">Updated milestone 2.634 and accompanying footnote.</note>
+                <note type="updated" update="text-version" value="1.0.5" date-time="2021-01-08T21:03:55.246Z" user="celso">updated bibliography entries</note>
+                <note type="updated" update="text-version" value="1.2.1" date-time="2021-01-13T22:10:40.571Z" user="john">Substantial revision of introduction</note>
+                <note type="updated" update="text-version" value="1.2.3" date-time="2021-01-15T21:02:54.981Z" user="john">1.2.3</note>
+                <note type="updated" update="text-version" value="1.2.4" date-time="2021-01-21T19:35:40.145Z" user="john">Further corrections, spaces, glossary edits, glossary re-cached.</note>
+                <note type="updated" update="text-version" value="1.2.5" date-time="2021-01-25T20:39:46.953Z" user="laura">Removed slash in long title Wylie</note>
+                <note type="updated" update="text-version" value="1.2.6" date-time="2021-01-29T10:14:39.97Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="1.2.7" date-time="2021-02-12T18:51:24.1Z" user="celso">"scholar" to "preceptor" in colophon</note>
+                <note type="updated" update="text-version" value="1.2.8" date-time="2021-02-22T23:30:13.66Z" user="celso">xml:lang="ja" to "Ja-Ltn" to create italics</note>
+                <note type="updated" update="text-version" value="1.2.9" date-time="2021-02-22T23:33:21.698Z" user="celso">fix blank pdf</note>
+                <note type="updated" update="text-version" value="1.2.10" date-time="2021-04-22T14:54:51.314Z" user="celso">added @xml:lang tag to  a few Chinese strings that were missing it</note>
+                <note type="updated" update="text-version" value="1.2.11" date-time="2021-05-27T00:03:49.101Z" user="celso">corrected a typo discovered during TM alignment</note>
+                <note type="updated" update="text-version" value="1.2.12" date-time="2021-06-26T04:20:55.515Z" user="celso">kiṃnara to kinnara</note>
+                <note type="updated" update="text-version" value="1.2.13" date-time="2021-07-12T10:11:05.79Z" user="andre">translation of brgyad pa'i sa fixed and glossary entry added</note>
+                <note type="updated" update="text-version" value="1.2.14" date-time="2021-09-02T10:37:10.41Z" user="andre"> translation of brgyad pa fixed in two more instances</note>
+                <note type="updated" update="text-version" value="1.2.15" date-time="2021-09-15T09:29:31.459Z" user="john">Change to one term, awaiting Wiesiek's edits.</note>
+                <note type="updated" update="text-version" value="1.2.16" date-time="2021-09-23T05:41:37.8Z" user="mike">Wiesieks edits added</note>
+                <note type="updated" update="text-version" value="1.2.17" date-time="2021-09-23T09:21:37.275Z" user="mike">typos in intro corrected</note>
+                <note type="updated" update="text-version" value="1.2.18" date-time="2021-09-24T05:58:28.337Z" user="mike">Wiesiek typo corrected</note>
+                <note type="updated" update="text-version" value="1.2.19" date-time="2022-03-17T01:26:37.529Z" user="celso">Fixed missing glossary link</note>
+                <note type="updated" update="text-version" value="1.2.20" date-time="2022-05-23T15:52:09.734Z" user="martina-cotter">Updated milestone 2.634 and accompanying footnote.</note>
+                <note type="updated" update="text-version" value="1.2.21" date-time="2022-07-26T06:01:56.362Z" user="cabie-sim">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
