--- a/translations/kangyur/placeholders/057-007_toh148-the_sutra_of_the_questions_of_gaganaganja.xml
+++ b/translations/kangyur/placeholders/057-007_toh148-the_sutra_of_the_questions_of_gaganaganja.xml
@@ -4,17 +4,14 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="en">The Sūtra of the Questions of
-                    Gaganagañja</title>
+                <title type="mainTitle" xml:lang="en">The Sūtra of the Questions of Gaganagañja</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">gaganagañjaparipṛcchāsūtra</title>
-                <title type="mainTitle" xml:lang="Bo-Ltn">nam mkha'i mdzod kyis zhus pa'i
-                    mdo/</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">nam mkha'i mdzod kyis zhus pa'i mdo/</title>
                 <title type="otherTitle" xml:lang="en">The Questions of Gaganagañja</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryagaganagañja­paripṛcchā­nāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Gaganagañjaparipṛcchā</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa nam mkha' mdzod kyis zhus pa
-                    zhes bya ba theg pa chen po'i mdo</title>
-                <title type="otherTitle" xml:lang="zh">大集大虛空藏菩薩所問經</title>
+                <title type="otherTitle" xml:lang="zh">《大集大虛空藏菩薩所問經》</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa nam mkha' mdzod kyis zhus pa zhes bya ba theg pa chen po'i mdo</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">nam mkha'i mdzod kyis zhus pa/</title>
                 <author role="translatorMain" ref="contributors.xml#team-7"/>
                 <author role="translatorEng" ref="contributors.xml#person-31">Casey Kemp</author>
@@ -22,10 +19,10 @@
                     Tamphel</author>
                 <consultant role="projectManager" ref="contributors.xml#person-31">Casey
                     Kemp</consultant>
-                <sponsor ref="eft:sponsor-197">Joseph Tse and Patricia Tse</sponsor>
+                <sponsor ref="eft:sponsor-197">Joseph Tse, Patricia Tse, Claire Tse, Matthew Tse, Sarah Tse and family, in dedication to all eczema sufferers.</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2019</date>
+                <edition>v 0.0.10 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -45,16 +42,19 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-01-03T05:20:56.17Z" user="cabie-sim">03/01/2022 05:20:56</note>
-
+                <note type="lastUpdated" date-time="2022-07-26T06:03:10.793Z" user="admin">26/07/2022 06:03:10</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version
                     increment</note>
-            
-    <note type="updated" update="text-version" value="0.0.2" date-time="2021-07-05T16:24:43.079Z" user="mike">summary added</note>
-    <note type="updated" update="text-version" value="0.0.3" date-time="2021-12-29T04:07:39.56Z" user="cabie-sim">Auto (update-sponsorship)</note>
-
-    <note type="updated" update="text-version" value="0.0.4" date-time="2022-01-03T05:20:52.174Z" user="cabie-sim">Auto (update-sponsorship)</note>
-</notesStmt>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2021-07-05T16:24:43.079Z" user="mike">summary added</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2021-12-29T04:07:39.56Z" user="cabie-sim">Auto (update-sponsorship)</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2022-01-03T05:20:52.174Z" user="cabie-sim">Auto (update-sponsorship)</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2022-03-21T05:35:37.141Z" user="cabie-sim">Auto (update-sponsorship)</note>
+                <note type="updated" update="text-version" value="0.0.6" date-time="2022-03-21T11:14:31.124Z" user="cabie-sim">Auto (update-sponsorship)</note>
+                <note type="updated" update="text-version" value="0.0.7" date-time="2022-03-28T14:33:09.926Z" user="cabie-sim">Auto (update-sponsorship)</note>
+                <note type="updated" update="text-version" value="0.0.8" date-time="2022-03-28T14:33:28.384Z" user="cabie-sim">Auto (update-sponsorship)</note>
+                <note type="updated" update="text-version" value="0.0.9" date-time="2022-03-28T15:44:09.486Z" user="cabie-sim">Auto (update-sponsorship)</note>
+                <note type="updated" update="text-version" value="0.0.10" date-time="2022-07-26T06:03:03.078Z" user="cabie-sim">Auto (update-titles)</note>
+            </notesStmt>
         </fileDesc>
     </teiHeader>
     <text>
