--- a/translations/kangyur/translations/058-001_toh152-the_sutra_of_the_questions_of_sagaramati.xml
+++ b/translations/kangyur/translations/058-001_toh152-the_sutra_of_the_questions_of_sagaramati.xml
@@ -4,17 +4,17 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">blo gros rgya mtshos zhus pa</title>
-                <title type="mainTitle" xml:lang="bo">བློ་གྲོས་རྒྱ་མཚོས་ཞུས་པ།</title>
                 <title type="mainTitle" xml:lang="en">The Questions of Sāgaramati</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">Sāgaramati­paripṛcchā</title>
-                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa blo gros rgya mtshos zhus pa zhes bya ba theg pa chen po’i mdo</title>
-                <title type="longTitle" xml:lang="bo">འཕགས་པ་བློ་གྲོས་རྒྱ་མཚོས་ཞུས་པ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">blo gros rgya mtshos zhus pa</title>
+                <title type="mainTitle" xml:lang="bo">བློ་གྲོས་རྒྱ་མཚོས་ཞུས་པ།</title>
                 <title type="longTitle" xml:lang="en">The Noble Great Vehicle Sūtra “The Questions of Sāgaramati”</title>
                 <title type="longTitle" xml:lang="Sa-Ltn">Ārya­sāgaramati­paripṛcchā­nāma­mahā­yāna­sūtra</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">blo gros rgya mtshos zhus pa’i mdo/</title>
+                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa blo gros rgya mtshos zhus pa zhes bya ba theg pa chen po’i mdo</title>
+                <title type="longTitle" xml:lang="bo">འཕགས་པ་བློ་གྲོས་རྒྱ་མཚོས་ཞུས་པ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">sāgaramati­paripṛcchā­sūtra</title>
-                <title type="otherTitle" xml:lang="zh">海意菩薩所問淨印法門經</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">blo gros rgya mtshos zhus pa’i mdo/</title>
+                <title type="otherTitle" xml:lang="zh">《海意菩薩所問淨印法門經》</title>
                 <author role="translatorMain" ref="contributors.xml#team-9">Translated by the Dharmachakra Translation Committee<lb/> under the
                     patronage and supervision of 84000: Translating the Words of the Buddha</author>
                 <editor role="externalReviewer" ref="contributors.xml#person-256">Douglas Duckworth</editor>
@@ -29,7 +29,7 @@
                 <sponsor ref="sponsors.xml#sponsor-5">Zhou Tian Yu, Chen Yi Qin, Zhou Xun, and Zhao Xuan</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.5.13 <date>2022</date>
+                <edition>v 1.5.14 <date>2022</date>
                 </edition>
             </editionStmt>
 
@@ -64,15 +64,13 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-04-11T12:28:03.384Z" user="admin">11/04/2022 12:28:03</note>
-
+                <note type="lastUpdated" date-time="2022-07-26T06:07:29.494Z" user="admin">26/07/2022 06:07:29</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version
                     increment</note>
                 <note type="updated" update="translation-status" value="2.d" date-time="2020-01-28T06:14:35.787Z" user="mike">2.d</note>
                 <note type="updated" update="translation-status" value="2.c" date-time="2020-03-16T14:28:28.307Z" user="line-tofte">2.c</note>
                 <note type="updated" update="translation-status" value="2.b" date-time="2020-05-15T09:51:51.171Z" user="line-tofte">2.b</note>
                 <note type="updated" update="translation-status" value="2.a" date-time="2020-05-15T14:22:25.145Z" user="mike">2.a</note>
-
                 <note type="updated" update="text-version" value="v 0.0.2" date-time="2020-07-10T09:51:44.263Z" user="andre">first draft mark-up
                     concluded</note>
                 <note type="updated" update="text-version" value="v 0.0.3" date-time="2020-07-17T10:09:23.603Z" user="andre">Mark-up issues
@@ -105,7 +103,6 @@
                     64</note>
                 <note type="updated" update="text-version" value="1.0.9" date-time="2020-09-17T10:53:50.664Z" user="andre">Minor typos fixed</note>
                 <note type="updated" update="text-version" value="1.1.0" date-time="2020-10-01T09:56:56.13Z" user="mike">typo corrected</note>
-
                 <note type="updated" update="text-version" value="1.2.0" date-time="2020-10-13T12:07:40.793Z" user="john">Several corrections, links,
                     and biblio entries added.</note>
                 <note type="updated" update="text-version" value="1.2.1" date-time="2020-11-07T01:41:59.65Z" user="laura">Corrected typo in
@@ -133,9 +130,12 @@
                     colophon</note>
                 <note type="updated" update="text-version" value="1.5.8" date-time="2021-04-22T15:02:26.065Z" user="celso">added @xml:lang tag to a
                     few Chinese strings that were missing</note>
-            
-    <note type="updated" update="text-version" value="1.5.9" date-time="2021-08-19T02:11:38.875Z" user="celso">Corrected minor typo in glossary entry</note>
-    <note type="updated" update="text-version" value="1.5.10" date-time="2021-09-02T10:42:40.071Z" user="andre"> translation of brgyad pa changed and glossary entry added</note>    <note type="updated" update="text-version" value="1.5.11" date-time="2022-02-14T19:56:55.259Z" user="laura">Fixed typo in glossary</note>    <note type="updated" update="text-version" value="1.5.12" date-time="2022-03-09T22:35:24.84Z" user="celso">Removed duplicate glossary entry</note>    <note type="updated" update="text-version" value="1.5.13" date-time="2022-04-11T12:27:59.47Z" user="laura">Bibliography update</note>
+                <note type="updated" update="text-version" value="1.5.9" date-time="2021-08-19T02:11:38.875Z" user="celso">Corrected minor typo in glossary entry</note>
+                <note type="updated" update="text-version" value="1.5.10" date-time="2021-09-02T10:42:40.071Z" user="andre"> translation of brgyad pa changed and glossary entry added</note>
+                <note type="updated" update="text-version" value="1.5.11" date-time="2022-02-14T19:56:55.259Z" user="laura">Fixed typo in glossary</note>
+                <note type="updated" update="text-version" value="1.5.12" date-time="2022-03-09T22:35:24.84Z" user="celso">Removed duplicate glossary entry</note>
+                <note type="updated" update="text-version" value="1.5.13" date-time="2022-04-11T12:27:59.47Z" user="laura">Bibliography update</note>
+                <note type="updated" update="text-version" value="1.5.14" date-time="2022-07-26T06:07:21.593Z" user="cabie-sim">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
