--- a/translations/kangyur/placeholders/058-005_toh156-the_sutra_of_the_questions_of_the_naga_king_anavatapta.xml
+++ b/translations/kangyur/placeholders/058-005_toh156-the_sutra_of_the_questions_of_the_naga_king_anavatapta.xml
@@ -4,12 +4,12 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">klu'i rgyal po ma dros pas zhus pa'i mdo/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">anavataptanāgarājaparipṛcchāsūtra</title>
                 <title type="mainTitle" xml:lang="en">The Sūtra of the Questions of the Nāga King Anavatapta</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa klu'i rgyal po ma dros pas zhus pa zhes bya ba theg pa chen po'i mdo</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">anavataptanāgarājaparipṛcchāsūtra</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">klu'i rgyal po ma dros pas zhus pa'i mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryānavataptanāgarāja­paripṛcchā­nāmamahāyānasūtra</title>
-                <title type="otherTitle" xml:lang="zh">阿耨達龍王所問經 · (大正藏：佛說弘道廣顯三昧經)</title>
+                <title type="otherTitle" xml:lang="zh">《阿耨達龍王所問經》 (大正藏：佛說弘道廣顯三昧經)</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa klu'i rgyal po ma dros pas zhus pa zhes bya ba theg pa chen po'i mdo</title>
                 <author role="translatorMain" ref="contributors.xml#team-9"/>
                 <author role="translatorEng" ref="contributors.xml#person-60">Benjamin Ewing</author>
                 <editor role="reviser" ref="contributors.xml#person-50">Dr. Andreas Doctor</editor>
@@ -19,7 +19,7 @@
                 <sponsor ref="sponsors.xml#sponsor-204">Tian Pujun</sponsor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.5 <date>2020</date>
+                <edition>v 0.0.6 <date>2020</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="2.h">
@@ -42,14 +42,14 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2020-08-26T06:47:33.918Z" user="admin">26/08/2020 06:47:33</note>
-            
-    <note type="updated" update="text-version" value="0.0.1" date-time="2020-04-21T13:16:51.146Z" user="line-tofte">0.0.1</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2020-08-19T10:39:20.765Z" user="admin">0.0.2</note>
-    <note type="updated" update="translation-status" value="2.h" date-time="2020-08-26T06:46:15.558Z" user="line-tofte">2.h</note>
-    <note type="updated" update="text-version" value="0.0.3" date-time="2020-08-26T06:46:15.558Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="text-version" value="0.0.4" date-time="2020-08-26T06:47:19.015Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="0.0.5" date-time="2020-08-26T06:47:31.121Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="lastUpdated" date-time="2022-07-26T06:09:37.164Z" user="admin">26/07/2022 06:09:37</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2020-04-21T13:16:51.146Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2020-08-19T10:39:20.765Z" user="admin">0.0.2</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2020-08-26T06:46:15.558Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2020-08-26T06:46:15.558Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2020-08-26T06:47:19.015Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2020-08-26T06:47:31.121Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.6" date-time="2022-07-26T06:09:29.446Z" user="cabie-sim">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
