--- a/translations/kangyur/translations/059-005_toh162-the_sutra_of_the_questions_of_srivasu.xml
+++ b/translations/kangyur/translations/059-005_toh162-the_sutra_of_the_questions_of_srivasu.xml
@@ -28,7 +28,7 @@
                 <editor role="finalReviewer" ref="contributors.xml#person-139">John Canti</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.4 <date>2021</date>
+                <edition>v 1.0.5 <date>2021</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -63,7 +63,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-06-29T16:18:25.148Z" user="admin">29/06/2022 16:18:25</note>
+                <note type="lastUpdated" date-time="2022-07-26T06:13:53.721Z" user="admin">26/07/2022 06:13:53</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version
                     increment</note>
                 <note type="updated" update="translation-status" value="2.d" date-time="2020-01-28T06:15:14.956Z" user="mike">2.d</note>
@@ -108,6 +108,7 @@
                 <note type="updated" update="text-version" value="1.0.2" date-time="2021-09-23T09:43:58.805Z" user="john">Edited g.14.</note>
                 <note type="updated" update="text-version" value="1.0.3" date-time="2021-09-23T09:45:05.675Z" user="john">1.0.3</note>
                 <note type="updated" update="text-version" value="1.0.4" date-time="2022-06-29T16:18:17.649Z" user="cabie-sim">Auto (update-titles)</note>
+                <note type="updated" update="text-version" value="1.0.5" date-time="2022-07-26T06:13:47.858Z" user="cabie-sim">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
