--- a/translations/kangyur/translations/060-002_toh173-the_sutra_of_the_questions_of_nairatma.xml
+++ b/translations/kangyur/translations/060-002_toh173-the_sutra_of_the_questions_of_nairatma.xml
@@ -4,19 +4,15 @@
         <teiHeader>
                 <fileDesc>
                         <titleStmt>
-                                <title type="mainTitle" xml:lang="Bo-Ltn">bdag med pa dris
-                                        pa</title>
-                                <title type="mainTitle" xml:lang="bo">བདག་མེད་པ་དྲིས་པ།</title>
-                                <title type="mainTitle" xml:lang="en">Questions on
-                                        Selflessness</title>
+                                <title type="mainTitle" xml:lang="en">Questions on Selflessness</title>
                                 <title type="mainTitle" xml:lang="Sa-Ltn">Nairātmya­paripṛcchā</title>
-                                <title type="longTitle" xml:lang="bo">འཕགས་པ་བདག་མེད་པ་དྲིས་པ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
-                                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa bdag med pa dris
-                                        pa zhes bya ba theg pa chen po’i mdo</title>
-                                <title type="longTitle" xml:lang="en">The Noble Mahāyāna Sūtra
-                                        “Questions on Selflessness”</title>
+                                <title type="mainTitle" xml:lang="bo">བདག་མེད་པ་དྲིས་པ།</title>
+                                <title type="mainTitle" xml:lang="Bo-Ltn">bdag med pa dris pa</title>
+                                <title type="longTitle" xml:lang="en">The Noble Mahāyāna Sūtra “Questions on Selflessness”</title>
                                 <title type="longTitle" xml:lang="Sa-Ltn">Ārya­nairātmya­paripṛcchā­nāma­mahāyāna­sūtra</title>
-                                <title type="otherTitle" xml:lang="zh"/>
+                                <title type="longTitle" xml:lang="bo">འཕགས་པ་བདག་མེད་པ་དྲིས་པ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
+                                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa bdag med pa dris pa zhes bya ba theg pa chen po’i mdo</title>
+                                <title type="otherTitle" xml:lang="zh">《問無我經》（大正藏：《尼乾子問無我義經》）</title>
                                 <author role="translatorMain" ref="contributors.xml#team-10">Translated by the Dharmasāgara Translation Group<lb/> under
                                         the patronage and supervision of 84000: Translating the
                                         Words of the Buddha </author>
@@ -39,7 +35,7 @@
                                 <editor role="finalReviewer" ref="contributors.xml#person-289">Nathaniel Rich</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.3 <date>2022</date>
+                <edition>v 1.0.4 <date>2022</date>
                 </edition>
             </editionStmt>
 
@@ -82,8 +78,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2022-03-02T19:02:12.266Z" user="admin">02/03/2022 19:02:12</note>
-
+                                <note type="lastUpdated" date-time="2022-07-26T06:19:20.507Z" user="admin">26/07/2022 06:19:20</note>
                                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated
                                         version increment</note>
                                 <note type="updated" update="translation-status" value="2.d" date-time="2020-01-28T06:15:30.186Z" user="mike">2.d</note>
@@ -116,7 +111,6 @@
                                 <note type="updated" update="translation-status" value="2.a" date-time="2021-04-20T05:55:05.338Z" user="mike">2.a</note>
                                 <note type="updated" update="text-version" value="0.0.12" date-time="2021-04-20T05:55:05.338Z" user="mike">Auto
                                         (update-publication-status)</note>
-
                                 <note type="updated" update="translation-status" value="2" date-time="2021-04-22T11:12:34.424Z" user="mike">2</note>
                                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-04-22T11:12:34.424Z" user="mike">Auto
                                         (update-publication-status)</note>
@@ -134,19 +128,19 @@
                                         (update-contributors)</note>
                                 <note type="updated" update="text-version" value="0.0.9" date-time="2021-09-03T08:35:46.222Z" user="line-tofte">Auto
                                         (update-contributors)</note>
-
                                 <note type="updated" update="text-version" value="0.0.10" date-time="2021-09-16T08:19:56.01Z" user="line-tofte">Auto
                                         (update-contributors)</note>
                                 <note type="updated" update="text-version" value="0.0.11" date-time="2021-09-23T15:39:46.363Z" user="konchog">At
                                         Andreas's request, proofed all sections and fixed a number
                                         of typos silently, especially in the notes.</note>
-                        
-    <note type="updated" update="text-version" value="0.0.12" date-time="2021-09-27T08:53:30.11Z" user="mike">updated verse 1.35</note>
-    <note type="updated" update="translation-status" value="1" date-time="2021-09-27T14:47:39.369Z" user="mike">1</note>
-    <note type="updated" update="text-version" value="1.0.0" date-time="2021-09-27T14:47:39.369Z" user="mike">First published version</note>
-    <note type="updated" update="text-version" value="1.0.1" date-time="2021-09-29T08:01:34.877Z" user="mike">Andreas's Corrections Added</note>
-    <note type="updated" update="text-version" value="1.0.2" date-time="2021-09-29T10:54:23.669Z" user="john">One verse updated as discussed, one small change in intro.</note>    <note type="updated" update="text-version" value="1.0.3" date-time="2022-03-02T19:02:08.222Z" user="celso">update cache for a note missing on distribution</note>
-            </notesStmt>
+                                <note type="updated" update="text-version" value="0.0.12" date-time="2021-09-27T08:53:30.11Z" user="mike">updated verse 1.35</note>
+                                <note type="updated" update="translation-status" value="1" date-time="2021-09-27T14:47:39.369Z" user="mike">1</note>
+                                <note type="updated" update="text-version" value="1.0.0" date-time="2021-09-27T14:47:39.369Z" user="mike">First published version</note>
+                                <note type="updated" update="text-version" value="1.0.1" date-time="2021-09-29T08:01:34.877Z" user="mike">Andreas's Corrections Added</note>
+                                <note type="updated" update="text-version" value="1.0.2" date-time="2021-09-29T10:54:23.669Z" user="john">One verse updated as discussed, one small change in intro.</note>
+                                <note type="updated" update="text-version" value="1.0.3" date-time="2022-03-02T19:02:08.222Z" user="celso">update cache for a note missing on distribution</note>
+                            <note type="updated" update="text-version" value="1.0.4" date-time="2022-07-26T06:19:12.776Z" user="cabie-sim">Auto (update-titles)</note>
+                        </notesStmt>
                 </fileDesc>
         </teiHeader>
         <text>
