--- a/translations/kangyur/translations/061-001_toh181-teaching_the_five_perfections.xml
+++ b/translations/kangyur/translations/061-001_toh181-teaching_the_five_perfections.xml
@@ -4,17 +4,17 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="otherTitle" xml:lang="Bo-Ltn">phar phyin lnga bstan pa’i mdo</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">Pañca­pāramitā­nirdeśasūtra</title>
                 <title type="mainTitle" xml:lang="en">Teaching the Five Perfections</title>
-                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa pha rol tu phyin pa lnga bstan pa zhes bya ba theg pa chen po’i mdo</title>
-                <title type="longTitle" xml:lang="Sa-Ltn">Āryapañcapāramitānirdeśanāmamahāyānasūtra</title>
-                <title type="otherTitle" xml:lang="zh">佛說五波羅蜜多經 (大般若波羅密多經第十一分至第十五分)</title>
-                <title type="mainTitle" xml:lang="Bo-Ltn">pha rol tu phyin pa lnga bstan pa</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">Pañcapāramitānirdeśa</title>
-                <title type="longTitle" xml:lang="en">The Noble Great Vehicle Sūtra “Teaching the Five Perfections”</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">pha rol tu phyin pa lnga bstan pa</title>
                 <title type="mainTitle" xml:lang="bo">ཕ་རོལ་ཏུ་ཕྱིན་པ་ལྔ་བསྟན་པ།</title>
+                <title type="longTitle" xml:lang="en">The Noble Great Vehicle Sūtra “Teaching the Five Perfections”</title>
+                <title type="longTitle" xml:lang="Sa-Ltn">Āryapañcapāramitānirdeśanāmamahāyānasūtra</title>
                 <title type="longTitle" xml:lang="bo">འཕགས་པ་ཕ་རོལ་ཏུ་ཕྱིན་པ་ལྔ་བསྟན་པ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
+                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa pha rol tu phyin pa lnga bstan pa zhes bya ba theg pa chen po’i mdo</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Pañca­pāramitā­nirdeśasūtra</title>
+                <title type="otherTitle" xml:lang="zh">《五波羅蜜多經》（大正藏：《大般若波羅蜜多經第十一分至第十五分》）</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">phar phyin lnga bstan pa’i mdo</title>
                 <author role="translatorMain" ref="contributors.xml#team-9">Translated by the Dharmachakra Translation Committee<lb/> under the
                     patronage and supervision of 84000: Translating the Words of the Buddha </author>
                 <editor role="externalReviewer" ref="contributors.xml#person-262">David Higgins</editor>
@@ -32,7 +32,7 @@
                 <sponsor ref="sponsors.xml#sponsor-30">Liu Fan and family</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.1.5 <date>2022</date>
+                <edition>v 1.1.6 <date>2022</date>
                 </edition>
             </editionStmt>
 
@@ -65,8 +65,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-03-02T19:19:19.567Z" user="admin">02/03/2022 19:19:19</note>
-
+                <note type="lastUpdated" date-time="2022-07-26T06:25:27.216Z" user="admin">26/07/2022 06:25:27</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version
                     increment</note>
                 <note type="updated" update="translation-status" value="2.d" date-time="2020-01-28T06:15:57.936Z" user="mike">2.d</note>
@@ -95,7 +94,6 @@
                 <note type="updated" update="translation-status" value="2.a" date-time="2021-08-25T06:54:14.7Z" user="line-tofte">2.a</note>
                 <note type="updated" update="text-version" value="0.0.12" date-time="2021-08-25T06:54:14.7Z" user="line-tofte">Auto
                     (update-publication-status)</note>
-
                 <note type="updated" update="text-version" value="0.0.13" date-time="2021-08-27T13:42:18.086Z" user="andre">Auto
                     (update-titles)</note>
                 <note type="updated" update="text-version" value="0.0.14" date-time="2021-08-30T09:06:48.471Z" user="andre">Auto
@@ -107,14 +105,16 @@
                     (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.0.17" date-time="2021-10-01T14:47:30.664Z" user="line-tofte">Auto
                     (update-contributors)</note>
-            
-    <note type="updated" update="translation-status" value="1" date-time="2021-10-19T16:54:20.972Z" user="mike">1</note>
-    <note type="updated" update="text-version" value="1.0.0" date-time="2021-10-19T16:54:20.972Z" user="mike">First published version</note>
-    <note type="updated" update="text-version" value="1.0.1" date-time="2021-10-21T19:35:39.458Z" user="john">Edits to two passages about Meru in space.</note>
-    <note type="updated" update="text-version" value="1.1.0" date-time="2021-10-22T18:55:42.8Z" user="john">Edits to first paragraph to separate hearers from bodhisattvas.</note>
-    <note type="updated" update="text-version" value="1.1.1" date-time="2021-10-25T10:45:14.398Z" user="john">Further edits to opening paragraphs.</note>
-    <note type="updated" update="text-version" value="1.1.2" date-time="2021-10-25T18:36:59.674Z" user="john">Edits to note 6.</note>
-    <note type="updated" update="text-version" value="1.1.3" date-time="2021-10-26T17:26:08.328Z" user="john">Edits to opening and note 6.</note>    <note type="updated" update="text-version" value="1.1.4" date-time="2022-03-02T19:11:46.383Z" user="celso">test if version update fixes uncached note</note>    <note type="updated" update="text-version" value="1.1.5" date-time="2022-03-02T19:19:15.314Z" user="celso">removed one glossary link</note>
+                <note type="updated" update="translation-status" value="1" date-time="2021-10-19T16:54:20.972Z" user="mike">1</note>
+                <note type="updated" update="text-version" value="1.0.0" date-time="2021-10-19T16:54:20.972Z" user="mike">First published version</note>
+                <note type="updated" update="text-version" value="1.0.1" date-time="2021-10-21T19:35:39.458Z" user="john">Edits to two passages about Meru in space.</note>
+                <note type="updated" update="text-version" value="1.1.0" date-time="2021-10-22T18:55:42.8Z" user="john">Edits to first paragraph to separate hearers from bodhisattvas.</note>
+                <note type="updated" update="text-version" value="1.1.1" date-time="2021-10-25T10:45:14.398Z" user="john">Further edits to opening paragraphs.</note>
+                <note type="updated" update="text-version" value="1.1.2" date-time="2021-10-25T18:36:59.674Z" user="john">Edits to note 6.</note>
+                <note type="updated" update="text-version" value="1.1.3" date-time="2021-10-26T17:26:08.328Z" user="john">Edits to opening and note 6.</note>
+                <note type="updated" update="text-version" value="1.1.4" date-time="2022-03-02T19:11:46.383Z" user="celso">test if version update fixes uncached note</note>
+                <note type="updated" update="text-version" value="1.1.5" date-time="2022-03-02T19:19:15.314Z" user="celso">removed one glossary link</note>
+                <note type="updated" update="text-version" value="1.1.6" date-time="2022-07-26T06:25:19.405Z" user="cabie-sim">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
