--- a/translations/kangyur/translations/061-018_toh198-maitreyas_setting_out.xml
+++ b/translations/kangyur/translations/061-018_toh198-maitreyas_setting_out.xml
@@ -6,8 +6,8 @@
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">Maitreya’s Setting Out</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">Maitreya­prasthāna</title>
-                <title type="mainTitle" xml:lang="bo">བྱམས་པ་འཇུག་པ།</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">byams pa ’jug pa</title>
+                <title type="mainTitle" xml:lang="bo">བྱམས་པ་འཇུག་པ།</title>
                 <title type="longTitle" xml:lang="en">The Noble Great Vehicle Sūtra “Maitreya’s Setting Out”</title>
                 <title type="longTitle" xml:lang="Sa-Ltn">Ārya­maitreya­prasthāna­nāma­mahāyāna­sūtra</title>
                 <title type="longTitle" xml:lang="Bo-Ltn">’phags pa byams pa ’jug pa zhes bya ba theg pa chen po’i mdo</title>
@@ -29,7 +29,7 @@
                 <editor role="finalReviewer" ref="contributors.xml#person-74">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.6 <date>2021</date>
+                <edition>v 1.0.7 <date>2021</date>
                 </edition>
             </editionStmt>
 
@@ -65,7 +65,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-26T06:31:43.545Z" user="admin">26/07/2022 06:31:43</note>
+                <note type="lastUpdated" date-time="2022-07-26T06:32:10.931Z" user="admin">26/07/2022 06:32:10</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="2.e" date-time="2020-01-27T13:16:15.494Z" user="mike">2.e</note>
                 <note type="updated" update="translation-status" value="2.f" date-time="2020-03-13T13:19:42.193Z" user="line-tofte">2.f</note>
@@ -103,6 +103,7 @@
                 <note type="updated" update="text-version" value="1.0.4" date-time="2021-11-03T18:38:44.535Z" user="celso">activated pending links</note>
                 <note type="updated" update="text-version" value="1.0.5" date-time="2022-01-06T20:29:21.784Z" user="celso">activated pending link</note>
                 <note type="updated" update="text-version" value="1.0.6" date-time="2022-07-26T06:31:35.79Z" user="cabie-sim">Auto (update-titles)</note>
+                <note type="updated" update="text-version" value="1.0.7" date-time="2022-07-26T06:32:03.201Z" user="cabie-sim">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
